--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular_todo",
-  "main": "app.js",
+  "main": "server.js",
   "dependencies": {
     "body-parser": ">= 1.15.0",
     "express": ">= 4.1.0",
@@ -10,6 +10,6 @@
     "mongoose": "latest"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node server.js"
   }
 }
